# Teluq-INF2020-Python-Web-uv

./: .coverage  .coveragerc  README.md  app.py  leaderboard.json  pyproject.toml  tictactoe.db  tictactoe.db-journal
.github/workflows/: tests.yml
classes/: Game.py  GameDAO.py  LeaderboardHelper.py  UserDAO.py  WebsocketHelper.py
css/: game.css  global.css  leaderboard.css  login.css  modal.css
js/: game.js  global.js  leaderboard.js  login.js  modal.js
routes/: game_routes.py  login_routes.py  websocket_routes.py
templates/: game.html  leaderboard.html  login.html
templates/components/: creative_commons.html  logout.html
tests/: test_game.py  test_game_dao.py  test_game_routes.py  test_login_routes.py  test_user_dao.py  test_websocket_helper.py  test_websocket_routes.py
